TEM-65-bug(cab render): fix cab not rendering properly
- Ensure that the cab and provider view render properly and the cards do not overlap at 110% browser magnification.

[Fixes TEM-65]

--- a/src/app/admin/cabs/cab-inventory/cab-inventory.component.scss
+++ b/src/app/admin/cabs/cab-inventory/cab-inventory.component.scss
@@ -200,3 +200,18 @@ mat-grid-tile {
   }
 }
 
+/* fix browser magnification at 110% */
+@media (min-width: 1270px) and (max-width: 1384px){
+  .cabs-grid-container {
+    display: block;
+  }
+  app-cab-card {
+    margin-left: 0.125rem;
+  }
+  .sm-width {
+    display: none;
+  }
+  .xl-width {
+    display: none;
+  }
+}
